feat: Tema Solid + Testing